--- a/TPPromoWEB_equipo-13A/WebApp/WebApp.csproj
+++ b/TPPromoWEB_equipo-13A/WebApp/WebApp.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CanjeExitoso.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="ElegirArticulo.aspx" />
     <Content Include="Global.asax" />
@@ -75,6 +76,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CanjeExitoso.aspx.cs">
+      <DependentUpon>CanjeExitoso.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CanjeExitoso.aspx.designer.cs">
+      <DependentUpon>CanjeExitoso.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
